--- a/pages/restaurant.html
+++ b/pages/restaurant.html
@@ -1,4 +1,4 @@
-<div class="restaurant" ng-if="restaurant.name">
+<div class="restaurant" ng-if="restaurant.name" ng-controller="restaurantController">
     <div class="rest-wrapper">
         <div class="image">
             <img ng-src="{{restaurant.image}}" height="100" width="100">
@@ -33,10 +33,12 @@
             <span>{{restaurant.bestDish.name}} </span>
             <div ng-click="flag=!flag" class="button">Show Image</div>
             <div ng-show="flag">
-              <div ng-click="getIngredients(restaurant.bestDish.image)" class="button" id="getIngredients-button">Get Ingredients</div>
-              <div ng-click="checkVegorNonVeg()" class="button" id="getIngredients-button2">Get Veg or nv</div>
+              <ul class="list-buttons">
+                <li style="padding : 10px 0; display:inline-block;"><div ng-click="getIngredients(restaurant.bestDish.image)" class="button">Get Ingredients</div></li>
+              <li style="padding : 10px 0; display:inline-block;"><div ng-click="checkVegorNonVeg()" class="button">Get Veg or nv</div></li>
+              </ul>
               <img ng-src="{{restaurant.bestDish.image}}" style="margin-top: 30px;width:300px; height:200px;">
-            </div>
+           </div>
         </div>
        </div>
    </div>
@@ -45,17 +47,19 @@
     </div>
     <div ng-if="ingredients">
         <ol>
-        <li ng-repeat="ingredient in ingredients">
-        {{ingredient}}
-        </li>
+          <li ng-repeat="ingredient in ingredients">
+            {{ingredient}}
+          </li>
         </ol>
-       <!--  <ol>
+     <!--    <ol>
           <li ng-repeat="j in probabilityvalue">
           {{j}}
           </li>
           
         </ol> -->
     </div>
+
+    
 
 
 </div>
